* Pressure Vesels, can now store a LOT more per block, however they are much more expensive, but they can also be quite large sizes!
* Feeder Fish Tanks no longer need you to have a certain shape... You just need to have the correct amount of water blocks for the tank size
* Jewelry no longer drops on death(configurable)
* Pressurised Water's range increased from 5 to 16
====Bugfixes====
* Fixed fishing rods using bait when pulling in and crash when the player is null
* Fixed Speed Boat dropping twice when broken with a TiC pick
====Config Changes====
* Removed Unused Block Ids for Molten Metals and Limestone Stairs
* Rennamed Autofisher Speed Entry (To force use of new SLOWER speed (since they now accept upgrades))
* Options to Disable the forcing of KelpForests/CoralReefs to only gen in those biomes with BOP
====API Changes====
* IItemUpgrade additional items

== Mariculture 1.1.4e ==
* Fixed NPE when player becomes null when fishing
* Can melt Raw Fish for Fish Oil ;)

== Mariculture 1.1.4d for Minecraft v1.6.X==
* Fixed insane tick handler usage for 'render updates' that weren't even doing anything
* Disabled Smoked Salmon for now

== Mariculture 1.1.4c for Minecraft v1.6.X==
* Hopefully fixed the last of the TE Fluiduct Crashes (Quick fix so may have issues in some cases: Proper fix will come with 1.2)
* Pressure Vessel Base Storage increased to be the same as two BC tanks, aka 32 buckets

== Mariculture 1.1.4b for Minecraft v1.6.X==
* Fixed Iron Wheel Recipe for those without certain mods
* Added in the textures that I forgot for some tools that can have the Pearl Modifier

== Mariculture 1.1.4a for Minecraft v1.6.X==
* Fixed TE Fluiduct Interaction, in places, may still be crashes somewhere
* Iron Wheels are used at twice the speed in a sluice as before
* lampsOn/Rutile/water ravine config fixes

== Mariculture 1.1.4 for Minecraft v1.6.X==