@@ -16,19 +16,6 @@ public class EnchantmentBlink extends EnchantmentJewelry {
 		super(i, weight, type);
 		this.setName("blink");
 	}
-	
-	@Override
-	public boolean canApply(ItemStack stack) {
-		if(stack.getItem() instanceof ItemJewelry) {
-			return true;
-		}
-		
-		if(EnumEnchantmentType.weapon.canEnchantItem(stack.getItem())) {
-			return true;
-		}
-		
-		return false;
-	}
 
 	@Override
 	public int getMinEnchantability(int level) {
