@@ -15,15 +15,6 @@ public class EnchantmentClock extends EnchantmentJewelry {
 		super(i, weight, type);
 		this.setName("clock");
 	}
-	
-	@Override
-	public boolean canApply(ItemStack stack) {
-		if(stack.getItem() instanceof ItemJewelry) {
-			return true;
-		}
-		
-		return false;
-	}
 
 	@Override
 	public int getMinEnchantability(final int level) {
