@@ -14,23 +14,6 @@ public class EnchantmentFallDamage extends EnchantmentJewelry {
 		super(i, weight, type);
 		this.setName("fall");
 	}
-	
-	@Override
-	public boolean canApply(ItemStack stack) {
-		if(stack.getItem() instanceof ItemJewelry) {
-			return true;
-		}
-		
-		if(EnumEnchantmentType.armor_feet.canEnchantItem(stack.getItem())) {
-			return true;
-		}
-		
-		if(EnumEnchantmentType.armor_legs.canEnchantItem(stack.getItem())) {
-			return true;
-		}
-		
-		return false;
-	}
 
 	@Override
 	public int getMinEnchantability(final int level) {
