@@ -15,19 +15,6 @@ public class EnchantmentGlide extends EnchantmentJewelry {
 		super(i, weight, type);
 		this.setName("glide");
 	}
-	
-	@Override
-	public boolean canApply(ItemStack stack) {
-		if(stack.getItem() instanceof ItemJewelry) {
-			return true;
-		}
-		
-		if(EnumEnchantmentType.weapon.canEnchantItem(stack.getItem())) {
-			return true;
-		}
-		
-		return false;
-	}
 
 	@Override
 	public int getMinEnchantability(final int level) {
