@@ -14,19 +14,6 @@ public class EnchantmentHealth extends EnchantmentJewelry {
 		super(i, weight, type);
 		this.setName("health");
 	}
-	
-	@Override
-	public boolean canApply(ItemStack stack) {
-		if(stack.getItem() instanceof ItemJewelry) {
-			return true;
-		}
-		
-		if(EnumEnchantmentType.armor_torso.canEnchantItem(stack.getItem())) {
-			return true;
-		}
-		
-		return false;
-	}
 
 	@Override
 	public int getMinEnchantability(int level) {
