@@ -13,15 +13,6 @@ public class EnchantmentRestore extends EnchantmentJewelry {
 		super(i, weight, type);
 		this.setName("restore");
 	}
-	
-	@Override
-	public boolean canApply(ItemStack stack) {
-		if(stack.getItem() instanceof ItemJewelry) {
-			return true;
-		}
-		
-		return false;
-	}
 
 	@Override
 	public int getMinEnchantability(int level) {
