@@ -8,7 +8,7 @@
   "authors": [
     "joshiejack"
   ],
-  "description": "~ In to the Deep ~ Adds expanded fishing, new fish, oceans to explore, machines to assist, sea magic and more",
+  "description": "~ Maritime Complex ~ Adds expanded fishing, new fish, oceans to explore, machines to assist, sea magic and more",
   "logoFile" : "/mariculture_logo.png",
   "updateUrl" : "",
   "parent" : "",
