@@ -31,6 +31,7 @@
 * Feeder Fish Tanks no longer need you to have a certain shape... You just need to have the correct amount of water blocks for the tank size
 * Jewelry no longer drops on death(configurable)
 * Pressurised Water's range increased from 5 to 16
+* Mariculture Enchants will now ONLY work on Jewelry (Removed Magic feather)
 ====Bugfixes====
 * Fixed fishing rods using bait when pulling in and crash when the player is null
 * Fixed Speed Boat dropping twice when broken with a TiC pick
